# Long-Short-Term-Memory-RNN

./: .gitignore  LICENSE  README.md  lstm.py  pyproject.toml  train.py  train_full.py  tune_hyperparameters.py
legacy/: README.md  original_lstm.py
src/lstm/: __init__.py  activations.py  cell.py  dense.py  grad_check.py  layers.py  model.py  utils.py
tests/: test_grad_check.py  test_lstm.py
