[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lstm-from-scratch"
version = "1.0.0"
description = "A clean NumPy implementation of a Long Short-Term Memory (LSTM) Recurrent Neural Network built from scratch."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v"
testpaths = [
    "tests",
]
